--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,3 +60,8 @@ jobs:
           git add .
           git commit -m 'action: `date`'
           git pull --rebase
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
